tests/ui-nightly/transmute-mut-dst-not-nocell.stderr
error[E0658]: mutable references are not allowed in constants
  --> tests/ui-nightly/transmute-mut-dst-not-nocell.rs:24:50
   |
24 | const DST_NOT_NO_CELL: &mut Dst = transmute_mut!(&mut Src);
   |                                                  ^^^^^^^^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error[E0015]: cannot call non-const fn `transmute_mut::<'_, '_, Src, Dst>` in constants
  --> tests/ui-nightly/transmute-mut-dst-not-nocell.rs:24:35
   |
24 | const DST_NOT_NO_CELL: &mut Dst = transmute_mut!(&mut Src);
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
